hard-gists/fdff82cc02b161d0141d/run.log
=== Docker Run Log for fdff82cc02b161d0141d ===
Started at: Mi 29. Okt 21:43:26 CET 2025

[2025-10-29 21:43:27] START: Running container for fdff82cc02b161d0141d
[2025-10-29 21:43:27] SUCCESS: Container 8e949dd1ec62a0a19fd3a49fe20cd9494b470ee1787f1fb1b1698f6e0876e871 started for fdff82cc02b161d0141d
=== Container logs for fdff82cc02b161d0141d ===
  File "/snippet.py", line 25
    print "usage:%s dbip dbport dbusr dbpwd [start_time] [end_time]" % sys.argv[0]
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for fdff82cc02b161d0141d ===
[2025-10-29 21:43:29] INFO: Container 8e949dd1ec62a0a19fd3a49fe20cd9494b470ee1787f1fb1b1698f6e0876e871 has stopped
